--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,13 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".activities.BottomNavigationActivity"
-            android:label="@string/title_activity_bottom_navigation"></activity>
+            android:label="@string/title_activity_bottom_navigation">
+
+        </activity>
+        <activity
+            android:name=".activities.SearchUserActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
