--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
     implementation 'com.android.support:cardview-v7:25.3.1'
     implementation 'com.nbsp:library:1.8'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     //implementation 'com.android.support:support-v4:25.3.1'
     implementation 'com.android.support:recyclerview-v7:25.3.1'
     implementation 'com.android.support:appcompat-v7:25.3.1'
