--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:name=".activities.SearchUserActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".activities.PdfViewActivity"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
