--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,6 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     implementation 'com.android.support:cardview-v7:25.3.1'
     implementation 'com.nbsp:library:1.8'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
@@ -48,6 +47,8 @@ dependencies {
     implementation 'com.android.support:design:25.3.1'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.+'
+    implementation files('libs/bc156/bcprov-ext-jdk15on-156.jar')
+    implementation files('libs/itext5-5.5.10/itextpdf-5.5.10.jar')
 }
 
 
