--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:25.4.0'
     implementation 'com.android.support:support-vector-drawable:25.4.0'
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -62,6 +63,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.+'
     implementation files('libs/bc156/bcprov-ext-jdk15on-156.jar')
     implementation files('libs/itext5-5.5.10/itextpdf-5.5.10.jar')
+    implementation 'com.android.support:gridlayout-v7:25.4.0'
 }
 
 
