--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,15 @@ dependencies {
     implementation 'com.android.support:design:25.3.1'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.+'
-    implementation files('libs/bc156/bcprov-ext-jdk15on-156.jar')
-    implementation files('libs/itext5-5.5.10/itextpdf-5.5.10.jar')
     implementation 'com.android.support:gridlayout-v7:25.4.0'
+
+    implementation 'com.itextpdf:itextg:5.5.10'
+    implementation 'com.madgag:scprov-jdk15on:1.47.0.2'
+    implementation 'com.madgag:scpkix-jdk15on:1.47.0.2'
+
+
+//    implementation files('libs/bc156/bcprov-ext-jdk15on-156.jar')
+//    implementation files('libs/bc156/bcpkix-jdk15on-156.jar')
 }
 
 
