--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         <activity
             android:name=".activities.pdf.PdfActivity"
             android:label="@string/app_name"></activity>
+        <activity
+            android:name=".activities.cert.KSInfoActivity"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
