converter factory types doesnt work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ repositories {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
