--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,17 +41,16 @@ repositories {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit-mock:2.5.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:25.4.0'
     implementation 'com.android.support:support-vector-drawable:25.4.0'
     implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+
     implementation 'com.android.support:cardview-v7:25.3.1'
     implementation 'com.nbsp:library:1.8'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
@@ -60,13 +59,21 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.3.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:25.3.1'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.+'
     implementation 'com.android.support:gridlayout-v7:25.4.0'
-
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.madgag:scprov-jdk15on:1.47.0.2'
     implementation 'com.madgag:scpkix-jdk15on:1.47.0.2'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.+'
+
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+
 
 
 //    implementation files('libs/bc156/bcprov-ext-jdk15on-156.jar')
